5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1643_2447.log
== TEST (2019-04-10 19:08:43) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z=x-y
if(z > 0):
	print("falta: ", z)
else:
	print("troco: ", z)
-- OUTPUT:
falta:  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:05) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z=x-y
if(z > 0):
	print("falta: ", z)
else:
	print("troco: ", z)
-- OUTPUT:
falta:  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:16) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z=x-y
if(z > 0):
	print("falta: ", z)
else:
	print("troco: ", z)
-- OUTPUT:
falta:  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:25) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z=x-y
if(z < 0):
	print("falta: ", z)
else:
	print("troco: ", z)
-- OUTPUT:
troco:  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:53) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z=y-x
if(z < 0):
	print("falta: ", z)
else:
	print("troco: ", z)
-- OUTPUT:
falta:  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:10:08) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z=y-x
if(z < 0):
	print("falta: ", z)
else:
	print("troco: ", z)
-- EXECUTION TIME:
0.221231
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta:  -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco:  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco:  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:10:22) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z=y-x
if(z > 0):
	print("falta: ", z)
else:
	print("troco: ", z)
-- OUTPUT:
troco:  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:15:51) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z = x-y
if(z > 0):
	print("troco: ",round(z,2))
else:
	print("falta: ",z)
-- OUTPUT:
troco:  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:17) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z =y-x
if(z > 0):
	print("troco: ",round(z,2))
else:
	print("falta: ",z)
-- OUTPUT:
falta:  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:47) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z =y-x
if(z > 0):
	print("troco: ",round(z,2))
else:
	print("falta: ",round(z,2))
-- OUTPUT:
falta:  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:56) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z =y-x
if(z > 0):
	print("troco: ",round(z,2))
else:
	print("falta: ",round(z,2))
-- OUTPUT:
falta:  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:16:59) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z =y-x
if(z > 0):
	print("troco: ",round(z,2))
else:
	print("falta: ",round(z,2))
-- EXECUTION TIME:
0.270605
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta:  -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco:  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
falta:  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:17:27) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z = y-x
if(z >= 0):
	print("troco: ",round(z,2))
else:
	print("falta: ",round(z,2))
-- OUTPUT:
falta:  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:17:38) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z = y-x
if(z >= 0):
	print("troco: ",round(z,2))
else:
	print("falta: ",round(z,2))
-- OUTPUT:
falta:  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:22) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z = y-x
if(z >= 0):
	print("troco de ",round(z,2))
else:
	print("falta  ",round(z,2))
-- OUTPUT:
falta   -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:29) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z = y-x
if(z >= 0):
	print("troco de ",round(z,2))
else:
	print("falta ",round(z,2))
-- OUTPUT:
falta  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:40) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z = y-x
if(z >= 0):
	print("troco de ",round(z,2))
else:
	print("falta ",round(z,2))
-- OUTPUT:
falta  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:18:42) 
-- CODE:
x = float(input("valor a pagar: "))
y = float(input("valor a pago: "))
z = y-x
if(z >= 0):
	print("troco de ",round(z,2))
else:
	print("falta ",round(z,2))
-- EXECUTION TIME:
0.149198
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:19:50) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = x-y
if(z <= 0):
	print("troco de ",round(z,2))
else:
	print("falta ",round(z,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:21:02) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = x-y
if(z <= 0):
	print("troco de ",round(z,2))
else:
	print("falta ",round(z,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:22:42) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = x-y
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:22:52) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = x-y
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:22:59) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = x-y
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:23:27) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = x-y
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:23:53) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = y-x
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:24:41) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = y-x
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- EXECUTION TIME:
0.132917
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:24:47) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = y-x
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:25:03) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = y-x
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:26:37) 
-- CODE:
x = float(input("valor do preco: "))
y = float(input("valor a pago: "))
z = y-x
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- OUTPUT:
falta  -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:28:28) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
if(x > y):
	print("falta ",round(z,2))	
else:
	print("troco de ",round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x > y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:30:17) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:30:30) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- EXECUTION TIME:
0.215494
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:30:43) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- EXECUTION TIME:
0.201463
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:30:50) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:31:04) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:31:21) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- EXECUTION TIME:
0.124325
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:31:24) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:31:37) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("falta ",round(falta,2))	
else:
	print("troco de ",round(troco,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:32:12) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("Falta ",round(falta,2))	
else:
	print("Troco de ",round(troco,2))
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:32:18) 
-- CODE:
preco = float(input("valor do preco: "))
pago = float(input("valor a pago: "))
troco = pago-preco 
falta = preco-pago
if(preco > pago):
	print("Falta ",round(falta,2))	
else:
	print("Troco de ",round(troco,2))
-- EXECUTION TIME:
0.132278
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
